--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
         <div class="navbar__right">
             <p><a href="index.html">Home</a></p>
-            <p><a href="">New Arrival</a></p>
-            <p><a href="">Most Wanted</a></p>
+            <p><a href="#section2" class="menu-item">New Arrival</a></p>
+            <p><a href="#section3" class="menu-item">Most Wanted</a></p>
             <p><a href="Collections.html">Collections</a></p>
             <p><a href="Contactus.html">Contact Us</a></p>
         </div>
@@ -49,8 +49,8 @@
 
         <div class="side-navbar-links">
             <p class="side-navbar-link"><a href="index.html">Home</a></p>
-            <p class="side-navbar-link"><a href="#narrivals">New Arrival</a></p>
-            <p class="side-navbar-link"><a href="#mwanted">Most Wanted</a></p>
+            <p class="side-navbar-link"><a href="#section2">New Arrival</a></p>
+            <p class="side-navbar-link"><a href="#section3">Most Wanted</a></p>
             <p class="side-navbar-link"><a href="Collections.html">Collections</a></p>
             <p class="side-navbar-link"><a href="Contactus.html">Contact Us</a></p>
         </div>
@@ -79,7 +79,6 @@
         </div>
         <div class="banner1__image">
             <img src="./Image/slider-one.jpg" alt="">
-            
         </div>
     </div>
     <!-- Brands -->
@@ -150,7 +149,7 @@
         </div>
     </div>
     <!-- New Arrivals -->
-
+    <section id="section2">
     <h1 class="text-3xl pl-5 font-bold mt-20">New Arrivals</h1><br>
     <div class="newarrival">
         <div class="newarrival__container">
@@ -188,9 +187,9 @@
             </div>
         </div>
     </div>
-
+</section>
     <!-- Most Wanted -->
-
+<section id="section3">
     <h1 class="text-3xl pl-5 font-bold mt-10">Most Wanted</h1><br>
     <div class="mostwanted">
         <div class="mostwanted__container">
@@ -221,7 +220,7 @@
             </div>
         </div>
     </div>
-
+</section>
 
     <!-- banner2 -->
 
